syntax = "proto3";

option csharp_namespace = "Microservice.InternetOfThingsManager.Protos";

package iotProto;

service InternetOfThingsService {
  rpc AddSensor (AddSensorRequest) returns (AddSensorReply);
  rpc RemoveSensor (RemoveSensorRequest) returns (RemoveSensorReply);
  rpc GetAllSensors (GetAllSensorsRequest) returns (stream GetAllSensorsReply);
  rpc GetAllSensorsFunctional (GetAllSensorsFunctionalRequest) returns (stream GetAllSensorsFunctionalReply);
  rpc GetSensorData (GetSensorDataRequest) returns (GetSensorDataReply);
  
}

message AddSensorRequest {
    string sensorGuid = 1;
    int32 modelId = 2;
    string name = 3;
    string functionalArray = 4;
}

message AddSensorReply {
    string link = 1;
}

message RemoveSensorRequest {
    string sensorGuid = 1;
}

message RemoveSensorReply {
    bool isDeleteComplete = 1;
}

message GetAllSensorsRequest {
	int32 modelId = 1;
}
message GetAllSensorsReply {
   repeated SensorProto sensors = 1;
}

message SensorProto {
  string id = 1;
  int32 modelId = 2;
  string name = 3;
  string functionalArray = 4;
  bool isEnabled = 5;
  string initTime = 6;
  string expireTime = 7;
}

message GetAllSensorsFunctionalRequest {
}
message GetAllSensorsFunctionalReply {
   repeated SensorFunctionalProto sensorsFunctional = 1;
}

message SensorFunctionalProto {
  int32 id = 1;
  string Description = 2;
  string name = 3;
}

message GetSensorDataRequest {
  string sensorGuid = 1;
}

message GetSensorDataReply {
  int32 id = 1;
  string sensorId = 2;
  string data = 3;
  string createDate = 4;
}